# blink

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  blink.toml  build.zig  build.zig.zon  main.odin  tauz.txt
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/blink/: Cargo.toml
crates/blink/src/: cli.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/networks/: Cargo.toml
crates/networks/src/: lib.rs
crates/networks/src/protocols/: http.rs  mod.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: editor.rs  events.rs  keys.rs  lib.rs  side_panel.rs  url_input.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
src/: main.zig
