[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
state = { path = "../state" }
utils = { path = "../utils" }
config = { path = "../config" }
networks = { path = "../networks" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5.21", features = ["derive"] }
serde = "1.0.215"
serde_json = "1.0"
